--- a/views/admin/partials/header.pug
+++ b/views/admin/partials/header.pug
@@ -7,6 +7,11 @@ header.header
             .col-9
                 div.text-right(style="padding-right: 20px; margin-right: 100px")
                     a(
+                        href=`${prefixAdmin}/my-account`
+                        class="btn btn-light btn-sm"
+                    ) #{user.fullName}
+
+                    a(
                         href=`${prefixAdmin}/auth/logout`
                         class="btn btn-primary btn-sm"
                     ) Đăng xuất
