--- a/public/css/test.css
+++ b/public/css/test.css
@@ -59,3 +59,42 @@ header {
     padding: 20px;
     text-align: center;
   }
+
+  /* Submenu */
+  .sub-menu {
+    position: relative;
+    z-index: 999;
+}
+
+.sub-menu ul {
+    position: absolute;
+    right: 0;
+    top: 100%;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    background: #eae9e9;
+    min-width: 180px;
+    display: none;
+}
+
+.sub-menu ul li {
+  padding: 10px;
+  border-bottom: 1px solid #ddd;
+}
+.sub-menu:hover > ul {
+  display: block;
+}
+
+.sub-menu ul li {
+  position: relative;
+}
+
+.sub-menu ul li ul {
+  right: 100px;
+  top: 0;
+}
+.sub-menu ul li:hover > ul {
+  display: block;
+}
+  /* End submenu */
