--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -1,14 +1,33 @@
-header
+include ../mixins/sub-menu.pug
 
+
+header
   .container
     .row.align-items-center
       .col-3.inner-logo
         a(href="/")
-          img(src="/images/starbuck.jpg", alt="Logo")
+          img(src="/images/starbuck.jpg" alt="Logo")
       .col-9
         .inner-menu
           ul
             li
-              a(href="/") Trang chủ
-            li
-              a(href="/products") Sản phẩm
+              a(href="/") Trang Chủ
+            li.sub-menu
+              -const pathProduct = `/products`
+              a(href=pathProduct) Sản phẩm
+                +sub-menu(layoutProductsCategory, pathProduct) 
+              //- ul
+              //-   li
+              //-     a(href="/products/slug-1") Mục 1
+              //-     ul
+              //-       li
+              //-         a(href="/products/slug-1-1") Mục 1 - 1
+              //-       li
+              //-         a(href="/products/slug-1-2") Mục 1 - 2
+              //-         ul
+              //-           li
+              //-             a(href="/products/slug-1-2-1") Mục 1 - 2 - 1
+              //-           li
+              //-             a(href="/products/slug-1-2-2") Mục 1 - 2 - 2
+              //-   li
+              //-     a(href="/products/slug-2") Mục 2
