--- a/views/client/pages/products/index.pug
+++ b/views/client/pages/products/index.pug
@@ -1,18 +1,12 @@
 extends ../../layouts/default.pug
 include ../../mixins/box-head.pug
 
+include ../../mixins/product-layout.pug
+
 block main
   .container.my-3
-    .col-12
-      +box-head("Danh sách sản phẩm")
-    .col-4.mb-3
-      each item in products
-        .product-item
-          .inner-image
-            img(src=item.thumbnail, alt=`Thumbnail of ${item.title}`)
-          .inner-content
-            h3.inner-title 
-              a(href=`/products/${item.slug}`) #{item.title}
-            .inner-price-new #{item.priceNew}$
-            .inner-price-old #{item.price}$
-            .inner-discount #{item.discountPercentage}%
+    .row
+      .col-12
+        +box-head("Danh sách sản phẩm")
+    
+    +product-grid(products)
