--- a/views/admin/pages/products-category/create.pug
+++ b/views/admin/pages/products-category/create.pug
@@ -25,18 +25,28 @@ block main
                     required
                 )
             div(class="form-group")
-            label(for="product_category") Danh mục
-            select(
-                name="parent_id"
-                id="parent_id"
-                class="form-control"
-            )
-                option(value="") -- Chọn danh mục --
-                if (records)
-                    +select-tree(records)
+                label(for="product_category_id") Danh mục
+                input(
+                    name="product_category_id"
+                    id="product_category_id"
+                    class="form-control"
+                )
+                    //- option(value="") -- Chọn danh mục --
+                    //- if (records)
+                    //-     +select-tree(records)
 
 
-
+            div(class="form-group")
+                label(for="parent_id") Danh mục cha
+                select(
+                    name="parent_id"
+                    id="parent_id"
+                    class="form-control"
+                )
+                    option(value="") -- Chọn danh mục --
+                    if (records)
+                        +select-tree(records)
+            
             div(class="form-group")
                 label(for="desc") Mô tả
                 textarea(
